# PyMFEM

./: .gitignore  .requirements.txt.swp  .travis.yml  CMakeLists.txt  COPYRIGHT  ChangeLog  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README  README.md  clean_import.py  pyproject.toml  requirements.txt  setup.py  setup_helper.py  setuputils.py  write_setup_local.py
.github/workflows/: build-and-test-callable.yml  build-and-test-dispatch.yml  build-and-test.yml  build_test_with_mfem44.yml  in_test.yml  in_test_master_tracking.yml  in_test_wrapper_generation.yml  main.yml  release_binary.yml  test43.yml  test44.yml  test_with_MFEM_master.yml  test_with_MFEM_release.yml  testrelease_binary.py  testrelease_binary.yml  testrelease_binary_v2.yml
Makefile_templates/: Makefile.local.loki  Makefile.local.macport  Makefile.local.mit_engaging  Makefile.local.shared  Makefile.local.shared.twopi
Makefile_templates/old_templates/: Makefile.local.linux_serial  Makefile.local.macport
ReleaseForPaper/examples/: CorrelationPlot.py  Example1.py  Example1a.py  Example1a_MultiObj.py  Example1b.py  Example1c.py  Example1c_old.py  Example2.py  Example2c.py  Example2c_MultiObj.py  Example2c_copy.py  Example3a.py  Example3c.py  MO_eval.py  PlotErrorDistributions.py  ex1arun  make_meshes.sh  marginal_plots.py  parameter_sweep.py  plot_ADF_pareto.py  plot_MO.py  plots.py  pythonpath.sh  save_obsvbles.sh  show_meshes.sh  visrange.txt  viz_2d_param_landscape.py  zz_talk_fig_mkr.py
ReleaseForPaper/prob_envs/: MultiObjectivePoisson.py  Poisson.py  RobustPoisson.py
ReleaseForPaper/utils/: PlotErrorDistributions.py  ReentrantCorner.py  Solution_LShaped.py  Solution_SinSin.py  Solution_Wavefront.py  Statistics.py
_build_system/: backend.py  build_config.py  build_consts.py  build_globals.py  build_gslib.py  build_hypre.py  build_libceed.py  build_metis.py  build_mfem.py  build_pymfem.py  build_utils.py  edit_copyright.py
binder/: postBuild  requirements.txt
bindings/: mesh.cpp  pymfem.cpp
ci_scripts/: add_cuda_10_1.sh  add_cuda_11_5.sh
data/: sphere-o2.mesh  sphere-o3.mesh  sphere-o4.mesh  sphere-o5.mesh  sphere-surface-o3.mesh  staircase.mesh  staircase_tri.mesh  staircase_tri2.mesh  waveguide.mesh  waveguide_hex.mesh
docker/: Dockerfile  build.sh  run.sh
docs/: changelog.txt  development_memo.txt  install.txt  manual.txt  manual_array.ipynb
examples/: distance.py  ex0.py  ex0p.py  ex1.py  ex10.py  ex10p.py  ex11p.py  ex12p.py  ex13p.py  ex14.py  ex14p.py  ex15.py  ex15p.py  ex16.mesh  ex16.py  ex16p.py  ex17.py  ex17p.py  ex18.py  ex18_common.py  ex18p.py  ex19.py  ex19p.py  ex1p.py  ex1p_mumps.py  ex2.py  ex20.py  ex20p.py  ex21.py  ex21p.py  ex22.py  ex22p.py  ex23.py  ex24.py  ex24p.py  ex25.py  ex25p.py  ex26.py  ex26p.py  ex27.py  (+64 more)
examples/chypre/: example_1.py  example_4.py  example_6.py
examples/jupyter/: README.md  ex1.ipynb  ex2.ipynb  ex9.ipynb  plot_DOFs_and_qpts.ipynb
examples/numba/: ex4.py
examples/petsc/: ex1p.py
examples/pumi/: ex2.py  ex3p.py  ex6p.py
examples/sparsemat/: vector_example.py
examples/wrapper_example/: coefficient_example.py  matrix_coefficient.py  smarsemat_example.py  vector_example.py
headers/: coefficient.hpp  mem_manager.hpp  schwarz.cpp
helpers/: README.md  util.py
mfem/: __init__.py  par.py  ser.py
mfem/_par/: #hypre.i#  Makefile  __init__.py  array.i  array.py  array_wrap.cxx  arrays_by_name.i  attribute_sets.i  auxiliary.i  auxiliary.py  auxiliary_wrap.cxx  bilinearform.i  bilinearform.py  bilinearform_wrap.cxx  bilinearform_wrap.h  bilininteg.i  bilininteg.py  bilininteg_wrap.cxx  bilininteg_wrap.h  blockmatrix.i  blockmatrix.py  blockmatrix_wrap.cxx  blockmatrix_wrap.h  blockoperator.i  blockoperator.py  blockoperator_wrap.cxx  blockoperator_wrap.h  blockstaticcond.i  blockvector.i  blockvector.py  blockvector_wrap.cxx  bounds.i  coefficient.i  coefficient.py  coefficient_wrap.cxx  coefficient_wrap.h  common_functions.i  common_functions.py  common_functions_wrap.cxx  communication.i  (+347 more)
mfem/_ser/: #*scratch*#  Makefile  __init__.py  array.i  array.py  array_wrap.cxx  arrays_by_name.i  attribute_sets.i  auxiliary.i  auxiliary.py  auxiliary_wrap.cxx  auxiliary_wrap.h  bilinearform.i  bilinearform.py  bilinearform_wrap.cxx  bilinearform_wrap.h  bilininteg.i  bilininteg.py  bilininteg_hdg.i  bilininteg_wrap.cxx  bilininteg_wrap.h  blockmatrix.i  blockmatrix.py  blockmatrix_wrap.cxx  blockmatrix_wrap.h  blockoperator.i  blockoperator.py  blockoperator_wrap.cxx  blockoperator_wrap.h  blockstaticcond.i  blockvector.i  blockvector.py  blockvector_wrap.cxx  bounds.i  coefficient.i  coefficient.py  coefficient_wrap.cxx  coefficient_wrap.h  common_functions.i  common_functions.py  (+296 more)
mfem/common/: README  arg_parser.py  array_instantiation_macro.i  array_listtuple_typemap.i  array_setitem_typemap.i  bessel.py  bilininteg_ext.i  chypre.py  coefficient_common.i  complex_fem_ext.i  const_doubleptr_typemap.i  const_intptr_typemap.i  cpointers.i  data_size_typemap.i  deprecation.i  dpg_common.i  enum_class.i  example_1.py  example_2.py  example_3.py  example_4.py  exception.i  exception_director.i  findpoints.py  generate_bilininteg_ext.py  generate_lininteg_ext.py  handle_template.i  hypre_int.i  ignore_common_functions.i  io_stream.hpp  io_stream_typemap.i  kernel_dispatch.i  lininteg_ext.i  matrix_file.py  memorytype_typemap.i  (+20 more)
temp/: requirements.txt
test/: ex2p.py  run_examples.py  run_tests.py  test.py  test_array.py  test_array2.py  test_bdrnormal.py  test_blockmatrix.py  test_blockoperator.py  test_chypre.py  test_coefficient.py  test_complex_operator.py  test_complexmg.py  test_datacollection.py  test_densemat.py  test_deprecated.py  test_dofloc.py  test_examples.py  test_fespace.py  test_geom.py  test_gridfunc.py  test_gz.py  test_intrules.py  test_memory.py  test_merge_gridfunction.py  test_mesh.py  test_module.py  test_ncmesh.py  test_numba.py  test_periodic_mesh.py  test_pfespace.py  test_point.py  test_segment.py  test_sparsemat.py  test_stringio.py  test_table.py  test_tmop.py  test_vector.py
travis/: add_cuda.sh
(+466 files in other folders)
