[project]
name = "mfem"
license = {file = "LICENSE"}
description = "MFEM + PyMFEM (finite element method library)"
dynamic = ["version"]
readme = "README.md"
authors = [
  { name = "MFEM development team" }
]
maintainers = [
  { name = "S. Shiraiwa", email = "shiraiwa@princeton.edu" }
]
keywords = ["scientific computing", "finite element method"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[project.urls]
"Homepage" = "http://mfem.org"
"Download" = "https://github.com/mfem"


[build-system]
requires = [
    "setuptools",
    "numpy>=2.0.0",
    "numba",
    "scipy",
	"cmake",
	"swig>=4.3",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = { attr = "mfem.__version__" }